--- a/refs.bib
+++ b/refs.bib
@@ -1,3 +1,24 @@
+@inproceedings{wang2011review,
+  title={Review on hybrid flow shop scheduling},
+  author={Wang, Wenpeng},
+  booktitle={2011 International Conference of Information Technology, Computer Engineering and Management Sciences},
+  volume={4},
+  pages={7--10},
+  year={2011},
+  organization={IEEE}
+}
+
+@inproceedings{crow1984summed,
+  title={Summed-area tables for texture mapping},
+  author={Crow, Franklin C},
+  booktitle={ACM SIGGRAPH computer graphics},
+  volume={18},
+  number={3},
+  pages={207--212},
+  year={1984},
+  organization={ACM}
+}
+
 @inproceedings{brisaboa2009k,
   title={k2-trees for compact web graph representation},
   author={Brisaboa, Nieves R and Ladra, Susana and Navarro, Gonzalo},
