--- a/paper.tex
+++ b/paper.tex
@@ -63,7 +63,7 @@ The abstract should briefly summarize the contents of the paper in
 %
 %
 \section{Introduction}
-With an increasing adoption of passenger tracking technology on public transportation networks, it is becoming necessary to store a constantly growing amount of information regarding the usage (demand) of the networks, which is different from the well-known information of stops and timetables (offer). To enable analysis over these large collections of data, a compact yet indexed representation is needed that, unlike the works that focus on indexing moving objects, allows for representation and querying of relevant network elements related to passenger trips.
+With the increasing use of passenger tracking technology on public transportation networks, it is becoming necessary to store a constantly growing amount of information regarding the usage (demand) of the networks, which is different from the well-known information of stops and timetables (offer). To enable analysis over these large collections of data, a compact yet indexed representation is needed that, unlike the works that focus on indexing moving objects, allows for representation and querying of relevant network elements related to passenger trips.
 
 A practical representation for this information that supports efficient indexing would have numerous possible applications, such as transportation companies interested in studying the ridership \cite{tu2018spatial} or improve the efficiency of the network, such as in \cite{weng2018mining}. Another application that is enabled by such analysis is the targeted advertising \cite{zhang2017targeted}, as being able to predict travel patterns is extremely useful for an advertiser.
 
@@ -106,7 +106,7 @@ A recent compact data structure named {\em CiNCT} has been proposed in \cite{koi
 \subsection{Trajectory data mining}
 Currently there are several known techniques that would allow to collect data regarding users' trips over a public transportation network. Numerous works exist where those trajectories are mined from the transactions of smart cards \cite{bhaskar2015passenger,wang2014aggregated}. This can be complemented with information derived from GPS devices, as shown in \cite{ma2014development}. Alternatively, reliable trajectories may be extracted relying on positioning obtained from cellular networks, as proven by \cite{liu2017exploring}.
 
-Because smart card methods usually provide only information about boarding stops, there are works that study the challenge of inferring alighting stops from passengers \ref{wang2011review}. In addition, the authors of \cite{tao2014exploring} have specifically tackled the challenge of reconstructing full trajectories, accounting for trip-chaining, by using data obtained from smart cards. Furthermore, in \cite{alsger2016validating} it is also proven that not only the alighting stops, but also the (last) destination stop of a trip can be estimated from boarding data gathered by a smart card, within a reasonable accuracy.
+Because smart card methods usually provide only information about boarding stops, there are works that study the challenge of inferring alighting stops from passengers \cite{wang2011review}. In addition, the authors of \cite{tao2014exploring} have specifically tackled the challenge of reconstructing full trajectories, accounting for trip-chaining, by using data obtained from smart cards. Furthermore, in \cite{alsger2016validating} it is also proven that not only the alighting stops, but also the (last) destination stop of a trip can be estimated from boarding data gathered by a smart card, within a reasonable accuracy.
 
 This summarized review proves that, although we were not able to access real data from a public transportation company for this work, such curated information about users' trips can indeed be obtained and used for our proposed representations.
 
