--- a/paper.tex
+++ b/paper.tex
@@ -813,7 +813,7 @@ When restricting to the end time, \ctr~consistently outperforms \ttctr, as shown
 
 The high selectivity of time restrictions explain why \ttctr~appears to become more competitive with the most restrictive queries of Figure~\ref{fig:xy2}b. However, its query time still increases several times when the \texttt{CSA} is highly compressed.
 
-The only query for which \ttctr~is clearly preferred over \ctr~is \texttt{board\_X}, with any restriction, as can be seen in the Figure~\ref{fig:board}. Both for \texttt{board\_X} and \texttt{board\_X$_{L}$}, \ttctr~takes on average less than one microsecond per query, as the only operations needed are two constant time $select$ over the bitvector \texttt{D} from the \texttt{CSA}, while \ctr~needs to subtract the occurrences of $X\$$ (as those are alighting stops, not boarding), for which $\Psi$ must be accessed. This advantage is carried on the queries with time restrictions as well.
+The only query for which \ttctr~is clearly preferred over \ctr~is \texttt{board\_X}, with any restriction, as can be seen in the Figure~\ref{fig:board}a. Both for \texttt{board\_X} and \texttt{board\_X$_{L}$}, \ttctr~takes on average less than one microsecond per query, as the only operations needed are two constant time $select$ over the bitvector \texttt{D} from the \texttt{CSA}, while \ctr~needs to subtract the occurrences of $X\$$ (as those are alighting stops, not boarding), for which $\Psi$ must be accessed. This advantage is carried on the queries with time restrictions as well.
 
 \begin{figure}[hbt!]
 \begin{subfigure}{0.5\linewidth}
@@ -828,9 +828,11 @@ The only query for which \ttctr~is clearly preferred over \ctr~is \texttt{board\
 \caption{\footnotesize (b)}
 \vspace{-12pt}
 \end{subfigure}
-\caption{Comparison of \texttt{board\_X$_{LT}$} queries, with all variants (a) and also with all variants of T-Matrix (b). Note the logarithmic scale in (b), as well as the measurements in nanoseconds}
+\caption{Comparison of \texttt{board\_X$_{LT}$} queries, with all variants (a) and also with all variants of \acumm~(b). Note the logarithmic scale in (b), as well as the measurements in nanoseconds}
 \label{fig:board}
 \end{figure}
+
+When comparing the best performing configuration of \ttctr~to the different variants of \acumm~discussed in Section~\ref{sec:acumm}, we can observe wildly different results in Figure~\ref{fig:board}b depending on the variant of the \texttt{board\_X} query used. The biggest difference is observed when comparing queries that filter by time, which use the \textt{WMT} in \ttctr, while for any variant of \acumm~solves it in a small number of constant time operations. Another evident difference occurs between queries that 
 
 \section{Conclusions}
 \label{sec:conc}
